--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,11 @@ body {
     /* Ensure it's above other elements */
 }
 
+/* Hide the break by default */
+.break {
+    display: none;
+}
+
 /*------------------------------------------------------------------*/
 /*  IE10 in Windows 8 and Windows Phone 8 Bug fix
 /*-----------------------------------------------------------------*/
@@ -4913,6 +4918,12 @@ span.ico-holder {
 
 #reviews-1.bg-image {
     background-image: url(../images/reviews.jpg);
+    /* Cover ensures that the background covers the entire container */
+    background-size: cover;
+    /* Center the image within the container */
+    background-position: center center;
+    /* Do not repeat the image */
+    background-repeat: no-repeat;
 }
 
 /*------------------------------------------*/
@@ -6261,9 +6272,6 @@ select:-webkit-autofill:focus {
     margin-top: 30px;
 }
 
-
-
-
 /* ==========================================================================
   20. FOOTER
   ========================================================================== */
@@ -7173,6 +7181,15 @@ input[type=number]::-webkit-inner-spin-button {
         left: 10px;
     }
 
+    #brands-1 {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+    #brands-1 h2 {
+        font-size: 3rem;
+    }
+
     #brands-1 .section-title p {
         padding: 0 8%;
     }
@@ -7182,6 +7199,53 @@ input[type=number]::-webkit-inner-spin-button {
         padding: 30px 30px;
     }
 
+    #brands-1 .brand-logo img {
+        width: 50%;
+    }
+
+    #gallery-2 {
+        padding-bottom: 0;
+    }
+
+    #gallery-2,
+    #blog-1 {
+        padding-top: 50px;
+        padding-bottom: 30px;
+    }
+
+    #gallery-2 h2,
+    #blog-1 h2 {
+        font-size: 3rem;
+        white-space: wrap;
+        margin-bottom: 30px;
+    }
+
+    #blog-1 {
+        padding-top: 0px;
+        padding-bottom: 30px;
+    }
+
+    #reviews-1.bg-image {
+        background-image: url(../images/reviews-mobile.jpg);
+        background-size: cover;
+        background-position: top center;
+    }
+
+    .review-1-txt p {
+        font-size: 1.4rem;
+        line-height: 1.3;
+        padding: 0 5%;
+    }
+
+    .review-1-txt p.testimonial-autor {
+        font-size: 1.3rem;
+        font-weight: 500;
+    }
+
+    .break {
+        display: block;
+    }
+
     .scrollToTopButton {
         right: 20px;
         /* Closer to the edge */
@@ -7189,6 +7253,10 @@ input[type=number]::-webkit-inner-spin-button {
         /* Closer to the edge */
         font-size: 20px;
         /* Smaller icon size */
+    }
+
+    .google-map {
+        height: 400px;
     }
 }
 
@@ -7252,6 +7320,12 @@ input[type=number]::-webkit-inner-spin-button {
     #brands-1 .brand-logo {
         margin-top: -20px;
         padding: 20px 40px;
+    }
+
+    #gallery-2,
+    #blog-1 {
+        padding-top: 50px;
+        padding-bottom: 60px;
     }
 }
 
